Atualização para webview, mudança de logo e mudança no nome do app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,42 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  url_launcher: ^6.1.10
+  webview_flutter: ^4.2.0
+  flutter_native_splash: ^2.2.19
+flutter_native_splash:
+  color: "#ffffff"
+  image:  assets/images/logo1.png
+  android: true
+  ios: true
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logoApp.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/images/logoApp.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/images/logoApp.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/logoApp.png" 
 
 
 flutter: 
