--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   url_launcher: ^6.1.10
   webview_flutter: ^4.2.0
   flutter_native_splash: ^2.2.19
+  webview_flutter_android: ^3.7.0
 flutter_native_splash:
   color: "#ffffff"
   image:  assets/images/logo1.png
